fix: reduce z-indexing of .carousel-indicators

--- a/app/assets/v2/scss/jtbd.scss
+++ b/app/assets/v2/scss/jtbd.scss
@@ -15,6 +15,9 @@
 }
 
 .home-carousel {
+  .carousel-indicators {
+    z-index: 1;
+  }
   .carousel-inner {
     min-height: 500px;
   }
